--- a/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
+++ b/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
@@ -510,6 +510,17 @@ $$
 cost_par <- rep(0, 7)
 cost_par[1:6] <- theta_lambda
 cost_par[7] <- sigma_lambda
+cost_par[8:11] <- theta_score
+cost_par[12] <- sigma_score
+cost_par[13] <- l0
+cost_par[14] <- a_l
+
+theta <- rep(0, 6)
+theta[1:4] <- eta_f
+theta[5:6] <- xi
+theta[7:9] <- alpha_m0
+theta[10:13] <- alpha_m1
+theta[14] <- beta
 
 ## Generate Lambda
 
@@ -536,11 +547,125 @@ gen_lambda <- function(df, cost_par, R){
   output <- output %>%
     dplyr::left_join(epsilon_lambda, by = c("i")) %>%
     dplyr::mutate_at(.vars = vars(starts_with("lambda")),
-                     .funs = ~ exp(mu_lambda + .))
+                     .funs = ~ exp(mu_lambda + .)) %>% 
+    dplyr::select(-mu_lambda)
  
   return(output)
 }
 
+# Generate Choice Probability
+
+gen_choice_probability <- function(df, theta, cost_par, R){
+  # Parameters
+  eta_f <- theta[1:4]
+  xi <- theta[5:6]
+  alpha_m0 <- theta[7:9]
+  alpha_m1 <- theta[10:13]
+  beta <- theta[14]
+  
+  # Cost Parameters
+  theta_score <- cost_par[8:11]
+  sigma_score <- cost_par[12]
+  l0 <- cost_par[13]
+  a_l <- cost_par[14]
+  
+  # Generate lambda
+  lambda <- gen_lambda(df, cost_par, R)
+  
+  # Price
+  price <- df$price * matrix(rep(1, dim(df)[1] * R), nrow = dim(df)[1])
+  colnames(price) <- c(paste("price", 1:R, sep = "_"))
+  
+  price <- data.frame(price) %>% 
+    tibble::as_tibble()  
+  
+  # Generate epsilon_lambda (draw R times)
+  epsilon_lambda <- matrix(rnorm(N * R, 0, sigma_lambda), nrow = N)
+  colnames(epsilon_lambda) <- c(paste("lambda", 1:R, sep = "_"))
+  
+  epsilon_lambda <- data.frame(expand_grid(i = 1:N), epsilon_lambda) %>% 
+    tibble::as_tibble()  
+    
+  # Generate Demand Friction
+  demand_friction <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(ifelse(d == prior_firm, 
+                                 0,  
+                                 eta_f[1] + eta_f[2]*x_1 + eta_f[3]*x_2 + eta_f[4]*x_3) 
+                          + ifelse(d == 1 & t == 0, 
+                                   xi[1] + xi[2]*log(.), 
+                                   0))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "demand_friction"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("demand_friction"))
+  
+  # Generate E_score
+  E_score <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(ifelse(t == 0 & m == 1,
+                                 exp(theta_score[1] + theta_score[2]*log(.)
+                                     + theta_score[3]*x_1 + theta_score[4]*x_2
+                                     + sigma_score^2 / 2),
+                                 0))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_score"), 
+                       starts_with("lambda"))
+  
+  # Generate E_oop
+  E_oop <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(.*exp(-.)*(l0^(a_l)/(a_l - 1))*policy_limit^(-a_l + 1))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_oop"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("E_oop"))
+
+  # Generate E_R_s
+  E_R_s <- E_score %>% 
+    dplyr::mutate_at(vars(starts_with("E_score")),
+                     funs(ifelse(t == 0 & m == 1,
+                                 (alpha_m1[1] + alpha_m1[2]*x_1 + alpha_m1[3]*x_2 + alpha_m1[4]*.) / beta,
+                                 (alpha_m0[1] + alpha_m0[2]*x_1 + alpha_m0[3]*x_2) / beta))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "E_score", "E_R_s"), 
+                       starts_with("E_score")) %>% 
+    dplyr::select(matches("E_R_s"))
+
+  # Generate E_R_C
+  E_R_C <- lambda %>% 
+    dplyr::mutate_at(vars(starts_with("lambda")),
+                     funs(0.98 * exp(-.) + 1.2 * (1 - exp(-.)))) %>% 
+    dplyr::rename_with(\(x) str_replace(x, "lambda", "E_R_C"), 
+                       starts_with("lambda")) %>% 
+    dplyr::select(matches("E_R_C"))
+  
+  # Calculate E_h
+  E_h <- - price - demand_friction - E_oop - E_R_s * E_R_C * price
+  E_h <- E_h %>% 
+    dplyr::rename_with(\(x) str_replace(x, "price", "E_h"), 
+                       starts_with("price"))
+  
+  # Calculate v
+  ## Note that now we ignore the second term of v and thus v = E_h
+  v <- E_h  %>% 
+    dplyr::rename_with(\(x) str_replace(x, "E_h", "v"), 
+                       starts_with("E_h"))
+  
+  ## Calculate Choice Probability
+  choice_probability <- df %>% 
+    dplyr::bind_cols(v) %>% 
+    dplyr::group_by(i, t) %>% 
+    dplyr::mutate_at(vars(starts_with("v")),
+                     funs(exp(.) / sum(exp(.)))) %>% 
+    dplyr::ungroup() %>% 
+    dplyr::rename_with(\(x) str_replace(x, "v", "choice_probability"), 
+                       starts_with("v"))
+  
+  output <- choice_probability
+  return(output)
+}
+
 tmp <- gen_lambda(df, cost_par, 50)
+tmp3 <- gen_choice_probability(df, theta, cost_par, 50)
+
+# tmp2 <- gen_choice_probability(df, theta, cost_par, 50)
+
 
 ```
