--- a/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
+++ b/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
@@ -10,7 +10,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, eval = FALSE, cache = FALSE)
+knitr::opts_chunk$set(echo = TRUE, eval = TRUE, cache = FALSE)
 library(bookdown)
 library(magrittr)
 library(tidyverse)
@@ -663,6 +663,12 @@ gen_choice_probability <- function(df, theta, cost_par, lambda){
   return(output)
 }
 
+##
+LL_renewal_price <- function(df, theta, cost_par, lambda){
+  
+}
+
+
 ## Simulated Log-likelihood
 
 SLL <- function(df, theta, cost_par, lambda){
@@ -687,12 +693,30 @@ SLL <- function(df, theta, cost_par, lambda){
 ## Optimization
 
 ```{r optimization}
+# Cost Parameters
+cost_par <- 0
+cost_par[1:6] <- theta_lambda
+cost_par[7] <- sigma_lambda
+cost_par[8:11] <- theta_score
+cost_par[12] <- sigma_score
+cost_par[13] <- l0
+cost_par[14] <- a_l
+
+# Choice Parameters
+theta <- 0
+theta[1:4] <- eta_f
+theta[5:6] <- xi
+theta[7:9] <- alpha_m0
+theta[10:13] <- alpha_m1
+theta[14] <- beta
+
 # Generate lambda
 R <- 50
 lambda <- gen_lambda(df, cost_par, R)
 
 ## Initial Value
 x0 <- rep(1, length(theta))
+# x0 <- theta * 0.8
 
 ## Optimization
 res <- optim(par = x0,
