--- a/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
+++ b/Monte_Carlo_Simulation_Jin_and_Vasserman_2021.Rmd
@@ -10,14 +10,14 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, eval = FALSE, cache = FALSE)
+knitr::opts_chunk$set(echo = TRUE, eval = TRUE, cache = FALSE)
 library(bookdown)
 library(magrittr)
 library(tidyverse)
 library(MASS)
 ```
 
-# Generate Data
+# Generate Data for Choice Model
 
 ## メモ
 - $v_{idt} = \mathbb{E}[h_{idt}] -\frac{\gamma}{2}\mathbb{E}[h_{idt}^{2}]$の第2項は無視している
@@ -36,7 +36,7 @@ First we generate data in the following procedure.
 ```{r generate lambda}
 rm(list = ls())
 
-N <- 10^3
+N <- 10^4
 T <- 1
 D <- 4
 
@@ -231,16 +231,20 @@ prior_firm_t0 <- expand.grid(i = 1:N) %>%
   tibble::as_tibble() %>% 
   dplyr::mutate(prior_firm = sample(1:4, size = N, replace = T, prob = c(0, 0.4, 0.35, 0.25)))
 
-## Generate Renewal Price
 
+## True Parameters
+### Inertia
+
+eta_f <- c(5, 1, 2, 2)
+xi <- c(1, -2.5)
+
+### Renewal Price
 alpha_m0 <- c(20, 5, 3)
 alpha_m1 <- c(20, 5, 3, -1)
 beta <- 20
 
-## Generate Inertia
 
-eta_f <- c(5, 1, 2, 2)
-xi <- c(1, -2.5)
+## Generate Choice
 
 choice_t0 <- expand.grid(i = 1:N, d = 1:D, t = 0) %>% 
   tibble::as_tibble() %>% 
@@ -481,6 +485,10 @@ df <- dplyr::bind_rows(df_t0, df_t1) %>%
   dplyr::arrange(t, i, d)
 
 ```
+
+# Generate Data for Cost Model
+
+[Later]
 
 # Estimation
 
